# spirograph

./: AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
.magnetic/plans/: 2026-01-23T2353Z-cli-session-defaults.md
docs/architecture/: architecture_v1.md
docs/plans/2026-01-23_235300Z_cli-session-defaults/: 2026-01-23_235300Z.md
docs/plans/2026-01-26_233100Z_improved-session-var-editing/: 2026-01-26_233100Z.md
docs/plans/2026-02-07_160040Z_bootstrap-agents/: 2026-02-07_160040Z.md
docs/plans/2026-02-09_174224Z_agents-md-portable-paths/: 2026-02-09_174224Z.md
docs/plans/2026-02-10_154611Z_cli-to-console-ui/: 2026-02-10_154611Z.md
docs/plans/2026-02-25_164924Z_console-ui-polish-v1/: 2026-02-25_164924Z.md
docs/plans/2026-02-25_215743Z_split-console-guidance-vs-analysis-concerns/: 2026-02-25_215743Z.md
docs/plans/2026-02-25_223732Z_size-aware-visual-density-shared-viewport-namespace/: 2026-02-25_223732Z.md
docs/plans/curve-guidance-accuracy-density-heuristic/: 2026-02-25_171254Z.md
scripts/: test
spirograph/: main.py  orchestration.py  randomness_tuner.py  viewport.py
spirograph/cli/: constants.py  evolution.py  guidance.py  prompts.py  random.py  randomness.py  session.py  types.py
spirograph/console_ui/: curve_analysis.py  guidance.py  input_guidance.py  prompts.py  random.py  session.py
spirograph/generation/: __init__.py  circular_generator.py  constants.py  data_types.py  generator.py  registry.py  requests.py  types.py
spirograph/rendering/: __init__.py  builder.py  constants.py  data_types.py  settings.py  turtle_renderer.py  types.py
(+13 files in other folders)
